[gd_scene load_steps=6 format=3 uid="uid://fvh70jxidati"]

[ext_resource type="Script" path="res://Escenas/UI/OptionsMenuUI.gd" id="1_4s0my"]
[ext_resource type="Texture2D" uid="uid://b6d0y07yn66x3" path="res://Arte/UI/buttonLong_brown.png" id="2_3tix0"]
[ext_resource type="Texture2D" uid="uid://bcrjv4mvtkhhy" path="res://Arte/UI/panelInset_beige.png" id="2_iisr2"]
[ext_resource type="Script" path="res://Escenas/UI/SliderVolume.gd" id="3_biohh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mw2vn"]
texture = ExtResource("2_iisr2")

[node name="OptionsMenuUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4s0my")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -8.0
offset_right = 1158.0
offset_bottom = 658.0
theme_override_styles/panel = SubResource("StyleBoxTexture_mw2vn")

[node name="LabelWarning" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 806.0
offset_top = 294.0
offset_right = 1142.0
offset_bottom = 408.0
theme_override_colors/font_color = Color(1, 0.196078, 0.145098, 1)
theme_override_font_sizes/font_size = 29
text = "CUIDADO esta acción no se puede deshacer."
autowrap_mode = 2

[node name="ButtonDeleteSave" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 790.0
offset_top = 180.0
offset_right = 1120.0
offset_bottom = 288.0
theme_override_font_sizes/font_size = 25
text = "Borrar datos guardados"
icon = ExtResource("2_3tix0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonBackToMenu" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 318.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 22
text = "Volver al menu"
icon = ExtResource("2_3tix0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="HSliderGeneralVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 254.0
offset_right = 328.0
offset_bottom = 290.0
scale = Vector2(1.4, 1.4)
max_value = 1.0
step = 0.001
script = ExtResource("3_biohh")
bus_name = "Master"

[node name="HSliderSoundVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 362.0
offset_right = 344.0
offset_bottom = 398.0
scale = Vector2(1.4, 1.4)
max_value = 1.0
step = 0.001
script = ExtResource("3_biohh")
bus_name = "Sound"

[node name="HSliderMusicVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 455.0
offset_right = 328.0
offset_bottom = 491.0
scale = Vector2(1.4, 1.4)
max_value = 1.0
step = 0.001
script = ExtResource("3_biohh")
bus_name = "Music"

[node name="LabelGeneral" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 202.0
offset_right = 349.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 28
text = "Volumen General"

[node name="LabelSounds" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 322.0
offset_right = 349.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 28
text = "Volumen Sonidos"

[node name="LabelMusic" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 427.0
offset_right = 339.0
offset_bottom = 469.0
theme_override_font_sizes/font_size = 28
text = "Volumen Musica"

[node name="PanelDeleteSaveWarning" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 26.0
offset_right = 1137.0
offset_bottom = 628.0

[node name="ConfirmationDelete" type="Button" parent="PanelDeleteSaveWarning"]
layout_mode = 0
offset_left = 370.0
offset_top = 154.0
offset_right = 752.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Si, borrar datos"

[node name="DenyDelete" type="Button" parent="PanelDeleteSaveWarning"]
layout_mode = 0
offset_left = 370.0
offset_top = 420.0
offset_right = 752.0
offset_bottom = 571.0
theme_override_font_sizes/font_size = 30
text = "No, conservar datos"

[node name="Label" type="Label" parent="PanelDeleteSaveWarning"]
layout_mode = 0
offset_left = 228.0
offset_top = 76.0
offset_right = 946.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 30
text = "¿Quieres borrar los datos guardados de la partida?"

[connection signal="pressed" from="Panel/ButtonDeleteSave" to="." method="_on_button_delete_save_pressed"]
[connection signal="pressed" from="Panel/ButtonBackToMenu" to="." method="_on_button_back_to_menu_pressed"]
[connection signal="pressed" from="PanelDeleteSaveWarning/ConfirmationDelete" to="." method="confirmation_delete_save"]
[connection signal="pressed" from="PanelDeleteSaveWarning/DenyDelete" to="." method="delete_save_warning"]
